<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetingDataExchangeAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_meeting">Nowe spotkanie</string>
    <string name="join_meeting">Dołącz</string>
    <string name="meetings">Spotkania</string>
    <string name="setting">Zarządanie serwerami</string>
    <string name="server_manage_button">Dodaj nowy serwer</string>
    <string name="add_new_server_text_view1">Krok 1</string>
    <string name="add_new_server_text_view2">Podaj adres serwera:</string>
    <string name="add_new_server_button">Dalej</string>
    <string name="add_new_server_succ_text1">Krok2</string>
    <string name="add_new_server_succ_text2">Podany adres jest prawidłowy</string>
    <string name="add_new_server_succ_text3">Czy posiadasz juz konto na serwerze </string>
    <string name="add_new_server_succ_button1">Tak,zaloguj</string>
    <string name="add_new_server_succ_button2">Nie,zarejstruj</string>
    <string name="log_in_text1">Krok 3</string>
    <string name="log_in_text2">Logowanie</string>
    <string name="log_in_text3">Login</string>
    <string name="log_in_text4">Hasło</string>
    <string name="log_in_button1">Zaloguj</string>
    <string name="sign_up_text1">Krok 3</string>
    <string name="sign_up_text2">Rejestracja</string>
    <string name="sign_up_text3">Login</string>
    <string name="sign_up_text4">Nick</string>
    <string name="sign_up_text5">E-mail</string>
    <string name="sign_up_text6">Hasło</string>
    <string name="sign_up_text7">Powtórz hasło</string>
    <string name="sign_up_button1">Zarejestruj</string>
    <string name="main_act_name">MeetingDataExchange</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_add_new_item">Add_new_itemActivity</string>
    <string name="add_item_ac_meeting_progress_button">Przebieg spotkania</string>
    <string name="add_item_ac_meeting_desc_button">Opis</string>
    <string name="add_item_ac_meeting_add_button">Dodaj</string>
    <string name="add_item_ac_meeting_add_photo_button">Dodaj zdjęcie</string>
    <string name="add_item_ac_meeting_add_file_button">Dodaj plik</string>
    <string name="add_item_ac_meeting_add_note_button">Dodaj notatke</string>
    <string name="add_item_ac_meeting_add_user_button">Dodaj użytkowników</string>
    <string name="title_activity_meeting_details">MeetingDetails</string>
    <string name="title_activity_server_manager">ServerManagerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_server_manage">ServerManageActivity</string>
    <string name="title_activity_add_server">AddServerActivity</string>
    <string name="title_activity_add_server_activity_fail">AddServerActivityFail</string>
    <string name="title_activity_add_server_activity_success">AddServerActivitySuccess</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_add_new_meeting">AddNewMeeting</string>
    <string name="add_new_meeting_textView1">Serwer</string>
    <string name="add_new_meeting_textView2">Tytuł spotkania</string>
    <string name="add_new_meeting_textView3">Temat</string>
    <string name="add_new_meeting_textView4">Uczestnicy mogą dodawać zawartość</string>
    <string name="add_new_meeting_button1">Utwórz spotkanie</string>
    <string name="meeting_details_desc_topic">Temat</string>
    <string name="meeting_details_desc_host_name">Organizator</string>
    <string name="meeting_details_desc_during_time">Czas trwania</string>
    <string name="meeting_details_desc_members">Uzytkownicy</string>
    <string name="meeting_details_desc_permission">Uprawnienia</string>
    <string name="meeting_details_desc_button">Ustawienia spotkania</string>
    <string name="server_option_logged_in_log_out">Ustawienia spotkania</string>
    <string name="server_option_logged_in_change_data">Ustawienia spotkania</string>
    <string name="server_option_logged_in_remove_server">Ustawienia spotkania</string>
    <string name="server_option_logged_out_log_in">Ustawienia spotkania</string>
    <string name="server_option_logged_out_remove_server">Ustawienia spotkania</string>
    <string name="title_activity_file_list">FileList</string>
    <string name="title_activity_display_qr">DisplayQR</string>

</resources>
