<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddServerActivitySuccess" >

    <TextView
        android:id="@+id/add_new_server_succ_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_new_server_succ_text1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/add_new_server_succ_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_new_server_succ_text1"
        android:text="@string/add_new_server_succ_text2" />
 <TextView
        android:id="@+id/add_new_server_succ_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_new_server_succ_text2"
        android:layout_marginTop="18dp"
        android:text="@string/add_new_server_succ_text3" />
    <Button
        android:id="@+id/add_new_server_succ_button_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_new_server_succ_text3"
        android:layout_marginTop="34dp"
        android:text="@string/add_new_server_succ_button1"
        android:onClick="log_in" />

    <Button
        android:id="@+id/add_new_server_succ_button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_new_server_succ_button_log_in"
        android:layout_centerVertical="true"
        android:text="@string/add_new_server_succ_button2"
        android:onClick="sign_up" />

   

</RelativeLayout>