<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:padding="0dp" >

 

     <Button
            android:id="@+id/sign_up_button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="#f1f1f1"
            android:drawableTop="@drawable/line"
            android:text="@string/add_item_ac_meeting_add_photo_button"
            android:onClick="add_photo_Button" />
     <Button
            android:id="@+id/sign_up_button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="#f1f1f1"
            android:drawableTop="@drawable/line"
            android:text="@string/add_item_ac_meeting_add_file_button" />
     <Button
            android:id="@+id/sign_up_button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="#f1f1f1"
            android:drawableTop="@drawable/line"
            android:text="@string/add_item_ac_meeting_add_note_button" />
    <Button
            android:id="@+id/sign_up_button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="#f1f1f1"
            android:drawableTop="@drawable/line"
            android:drawableBottom="@drawable/line"
            android:text="@string/add_item_ac_meeting_add_user_button" />
    <Button
            android:id="@+id/sign_up_button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="Button"
            android:visibility="invisible"
            android:enabled="false" />
</LinearLayout>